// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaForm should render TextAreaForm correctly 1`] = `
.c1 {
  width: 100%;
  border-radius: 4px;
  padding: 8px 12px;
  background-color: #FFFFFF;
  color: #263147;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
  border: 1px solid #D3D6DA;
}

.c1::-webkit-input-placeholder {
  color: #7D8391;
}

.c1::-moz-placeholder {
  color: #7D8391;
}

.c1:-ms-input-placeholder {
  color: #7D8391;
}

.c1::placeholder {
  color: #7D8391;
}

.c1:focus {
  border: 1px solid #263147;
  box-shadow: 0 0 0 2px #D3D6DA;
}

.c1:disabled {
  color: #D3D6DA;
  background-color: #F7F7F8;
  border-color: #E9EAEC;
}

.c2 {
  height: 120px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<label
  class="c0"
>
  
  <textarea
    class="c1 c2"
  />
</label>
`;

exports[`TextAreaForm should render TextAreaForm with disabled state 1`] = `
.c1 {
  width: 100%;
  border-radius: 4px;
  padding: 8px 12px;
  background-color: #FFFFFF;
  color: #263147;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
  border: 1px solid #D3D6DA;
}

.c1::-webkit-input-placeholder {
  color: #7D8391;
}

.c1::-moz-placeholder {
  color: #7D8391;
}

.c1:-ms-input-placeholder {
  color: #7D8391;
}

.c1::placeholder {
  color: #7D8391;
}

.c1:focus {
  border: 1px solid #263147;
  box-shadow: 0 0 0 2px #D3D6DA;
}

.c1:disabled {
  color: #D3D6DA;
  background-color: #F7F7F8;
  border-color: #E9EAEC;
}

.c2 {
  height: 120px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<label
  class="c0"
>
  
  <textarea
    class="c1 c2"
    disabled=""
  />
</label>
`;
